Yet another but up-to-date (hopefully) cors configuration